--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,14 @@
 
 /*
-  Name: testc css
+  Name: test css
 */
 
-.container {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
+
+h1 {
+  font-size: 1.5em;
+  }
+
+
+background-image: radial-gradient(#979797 1.5px, transparent 1.5px);
+background-size: 43px 43px;
+background-color: #f0f0f0;
