--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,5 @@ h1 {
 }
 
 body {
-  background-image: radial-gradient(#979797 1.5px, transparent 1.5px);
-  background-size: 43px 43px;
-  background-color: #f0f0f0;
+  background-color: #000000;
 }
