--- a/css/main.css
+++ b/css/main.css
@@ -10,5 +10,7 @@ h1 {
 }
 
 body {
-  background-color: #000000;
+  background-image: radial-gradient(#979797 1.5px, transparent 1.5px);
+  background-size: 43px 43px;
+  background-color: #f0f0f0;
 }
