--- a/css/main.css
+++ b/css/main.css
@@ -14,3 +14,9 @@ body {
   background-size: 75px 75px;
   background-color: #f0f0f0;
 }
+
+p {
+  -webkit-box-shadow: 0 0 8.5px 6px #838383;
+  -moz-box-shadow: 0 0 8.5px 6px #838383;
+  box-shadow: 0 0 8.5px 6px #838383;
+}
