--- a/css/main.css
+++ b/css/main.css
@@ -19,4 +19,5 @@ p {
   -webkit-box-shadow: 0 0 8.5px 6px #838383;
   -moz-box-shadow: 0 0 8.5px 6px #838383;
   box-shadow: 0 0 8.5px 6px #838383;
+  background-color: #9ea1ff;
 }
