--- a/css/main.css
+++ b/css/main.css
@@ -20,4 +20,5 @@ p {
   -moz-box-shadow: 0 0 8.5px 6px #838383;
   box-shadow: 0 0 8.5px 6px #838383;
   background-color: #9ea1ff;
+  width: 500px;
 }
