--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
   background-color: #f0f0f0;
 }
 
-p {
+main {
   -webkit-box-shadow: 0 0 8.5px 6px #838383;
   -moz-box-shadow: 0 0 8.5px 6px #838383;
   box-shadow: 0 0 8.5px 6px #838383;
