--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,6 @@ main {
   background-color: #9ea1ff;
   width: 500px;
   padding: 10px;
-  align: center;
+  box-align: center;
   border-radius: 5px;
 }
