--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 body {
-  margin: 0 20%;
+  margin: 5% 20%;
   background-image: radial-gradient(#979797 1px, transparent 1px);
   background-size: 75px 75px;
   background-color: #f0f0f0;
