--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,7 @@ body {
 }
 
 p {
-  -webkit-box-shadow: 0 0 8.5px 6px #838383;
-  -moz-box-shadow: 0 0 8.5px 6px #838383;
+  border-style: solid; size: 1px;
   box-shadow: 0 0 8.5px 6px #838383;
   background-color: #9ea1ff;
   width: 500px;
