--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
   margin: 5% 20%;
   background-image: radial-gradient(#979797 1px, transparent 1px);
   background-size: 75px 75px;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
 }
 
 p {
