--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,9 @@ h1 {
 
 body {
   margin: 5% 20%;
-  background-image: radial-gradient(#979797 1px, transparent 1px);
-  background-size: 75px 75px;
-  background-color: #ffffff;
+  background: #d7d7d7;
+  background: -webkit-linear-gradient(0deg, #d7d7d7 0%, #eeeeee 100%);
+  background: linear-gradient(0deg, #d7d7d7 0%, #eeeeee 100%);
 }
 
 p {
