--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
 
 p {
   border-style: solid; size: 0.5px;
-  box-shadow: 0 0 8.5px 6px #838383;
+  /*box-shadow: 0 0 8.5px 6px #838383;*/
   background-color: #9ea1ff;
   width: 500px;
   padding: 10px;
