--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ h1 {
 
 body {
   margin: 5% 20%;
-  background: #d7d7d7;
+  background: white;
   background: -webkit-linear-gradient(0deg, #d7d7d7 0%, #eeeeee 100%);
   background: linear-gradient(0deg, #d7d7d7 0%, #eeeeee 100%);
 }
