--- a/css/main.css
+++ b/css/main.css
@@ -23,4 +23,13 @@ p {
   padding: 10px;
   box-align: center;
   border-radius: 3px;
-  }
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  background-color: #00af8f;
+  list-style: none; /* removes bullets */
+  padding: .5em;
+  margin: 0;
+}
