--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,12 @@ body {
 }
 
 p {
-  border-style: solid; size: 1px;
+  border: 1px solid;
   /*box-shadow: 0 0 8.5px 6px #838383;*/
   background-color: whitesmoke;
   padding: 10px;
   box-align: center;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 
 ul {
