--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #00af8f;
+  background-color: whitesmoke;
   border: 1px solid;
   list-style: none; /* removes bullets */
   padding: .5em;
