--- a/css/main.css
+++ b/css/main.css
@@ -27,11 +27,10 @@ p {
 #nav {
   display: flex;
   list-style-type: none;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   background-color: whitesmoke;
   border: 1px solid;
-  list-style: none; /* removes bullets */
   padding: .5em;
   margin: 0;
 }
