--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,6 @@ p {
   align-items: center;
   background-color: whitesmoke;
   border: 1px solid;
-  padding: .5em;
-  margin: 0;
+  padding: 3px;
+  margin: 2%;
 }
