--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
   background: #bdbdbd;
 }
 
-p {
+#content {
   font-family: 'Merriweather Sans', sans-serif;
   font-size: 16;
   font-weight: 400;
