--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
   font-family: 'Merriweather Sans', sans-serif;
   font-size: 16;
   font-weight: 400;
-  border: 1px solid;
+  /*border: 1px solid;*/
   box-shadow: inset 1px 1px #fff, 1px 1px #000;
   background-color: whitesmoke;
   padding: 10px;
